Image models added. Location endpoint added. Model changes. Responses added.
