# requests/location.go
@@ -1,0 +1,5 @@
+package requests
+
+type LocationCountry struct {
+	Country string `json:"country" validate:"required"`
+}
